Bug 76628 - FILEOPEN:RTF: Cyrillic characters aren't encoded correctly
Summary: FILEOPEN:RTF: Cyrillic characters aren't encoded correctly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-03-26 11:27 UTC by Xisco Faulí
Modified: 2014-04-04 08:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (22.20 KB, text/rtf)
2014-03-26 11:27 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2014-03-26 11:27:27 UTC
Created attachment 96405 [details]
sample document

In Windows 7 Enterprise the attached document is encoded correctly with:
   - Libreoffice 4.1.5.3 Build ID: 1c1366bba2ba2b554cd2ca4d87c06da81c05d24
   - Libreoffice 4.2.2.1 Build ID: 3be8cda0bddd8e430d8cda1ebfd581265cca5a0f

but not with:
   - Libreoffice 4.3.0.0.alpha0 Build ID: aeab0183e86fe011d32058864c02b2de4da32dc9
Comment 1 Urmas 2014-03-26 11:42:50 UTC
Regression since 4.03.14.
Comment 2 Michael Stahl 2014-04-02 19:00:07 UTC
bibisect says: b25c29389e81c52395521ce8efdf99699abc500a..229e59d478c77160659c93ed328b883552519e09

this one is highly suspicious:

commit bbe3627eece0c3486e7ea11f2f13377aaa3a8fed
Author:     Miklos Vajna <vmiklos@collabora.co.uk>
AuthorDate: Wed Mar 5 20:54:26 2014 +0100

    rtftok: stop sending sprm:CRgFtc{0,1,2} tokens
Comment 3 Miklos Vajna 2014-04-03 19:50:13 UTC
I'll take care of this.
Comment 4 Commit Notification 2014-04-04 08:54:47 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8baff038befe47957967278a7225bc48e0d89889

fdo#76628 RTF import: allow the same font to have multiple encodings



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2014-04-04 08:55:47 UTC
Regression was master-only, no backport.